# slashpass-private-server

./: .gitignore  Pipfile  README.md  pyproject.toml  server.py  zappa_settings.example.json
slashpass_private_server/: run_server.py
slashpass_private_server/static/: all.css
slashpass_private_server/templates/: base.html  insert.html
static/: all.css
templates/: 404.html  admin.html  base.html  insert.html  status.html  success.html
tests/: test_helper_methods.py  test_pages.py
utilities/: generate_bip39.py
